# multicolor_tracking

./: CMakeLists.txt  Makefile  README.md  detector.cpp  detector.h  objectinfo.cpp  objectinfo.h  sample.cpp
